--- a/templates/deleteCategory.html
+++ b/templates/deleteCategory.html
@@ -6,6 +6,7 @@
             <h2> Are you sure you want to delete {{category.name}}? </h2>
 
             <form action="#" method='post'>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                 <button type="submit" class="btn btn-default delete">
                     <span class="glyphicon glyphicon-trash"
                           aria-hidden="true"></span>Delete
