--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -8,6 +8,7 @@
             <form action="{{ url_for('editCategory',category_id = category.id)}}"
                   method="post">
                 <div class="form-group">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" name="name"
                            value="{{category.name }}">
