--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -7,6 +7,7 @@
 
             <form action="#" method="post" enctype="multipart/form-data">
                 <div class="form-group">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                     <label for="name">Name:</label>
                     <input type="text" maxlength="100" class="form-control"
                            name="name" value="{{item.name}}">
